[gd_scene load_steps=9 format=3 uid="uid://ceg5mgw18pg7r"]

[ext_resource type="Script" path="res://Scripts/destroy_platform.gd" id="1_2xu7m"]
[ext_resource type="Texture2D" uid="uid://ct3isxaswclch" path="res://Graphics/platformbrrmax.png" id="2_i4tyh"]
[ext_resource type="Script" path="res://Scripts/destroy_platform_check.gd" id="2_wfva3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7h2d"]
size = Vector2(180, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgjwr"]
size = Vector2(154, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gde6q"]
size = Vector2(180, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_i0yv2"]
animations = [{
"frames": [],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_252qv"]
size = Vector2(180, 2)

[node name="Destroy_platform" type="StaticBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_2xu7m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i4tyh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u7h2d")
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_pgjwr")
disabled = true

[node name="Player_check" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_check"]
shape = SubResource("RectangleShape2D_gde6q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i0yv2")
animation = &"Idle"
autoplay = "Idle"

[node name="Destroy_platform_check" type="Node" parent="."]
script = ExtResource("2_wfva3")

[node name="Check_Death_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check_Death_Area"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_252qv")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Player_check" to="Destroy_platform_check" method="_on_player_check_area_entered"]
[connection signal="area_exited" from="Player_check" to="Destroy_platform_check" method="_on_player_check_area_exited"]
[connection signal="dis_call_destroy" from="Destroy_platform_check" to="." method="_on_destroy_platform_check_dis_call_destroy"]
[connection signal="show_call_destroy" from="Destroy_platform_check" to="." method="_on_destroy_platform_check_show_call_destroy"]
[connection signal="area_entered" from="Check_Death_Area" to="." method="_on_check_death_area_area_entered"]
